# nime-zenodo-upload

./: .gitignore  README.md  pyproject.toml
nime_zenodo_upload/: __init__.py  __main__.py
